tests/positive/basic/import_transitive/a.ci
import "b.ci";
int getValue() { return fromB(); }
