tests/negative/semantic/imported_transitive_undefined_variable/a.ci
import "b.ci";
int fromA() { return fromB(); }
